--- a/main.html
+++ b/main.html
@@ -8,6 +8,16 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<ol>
+		<li data-ns-test = "shopingList">Mobilephone</li>
+		<li data-ns-test = "shopingList">SmartTv</li>
+		<li data-ns-test = "shopingList">Watch</li>
+	</ol>
+	<ul>
+		<li data-ns-test ="holidayList">Delhi</li>
+		<li data-ns-test ="holidayList">Kashmir</li>
+		<li data-ns-test ="holidayList">Bihar</li>
+	</ul>
     <script type="text/javascript" src="./script.js">
 </script>
 
