--- a/main.html
+++ b/main.html
@@ -8,16 +8,16 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-	<ol>
-		<li data-ns-test="shopingList">Mobilephone</li>
-		<li data-ns-test="shopingList">SmartTv</li>
-		<li data-ns-test="shopingList">Watch</li>
-	</ol>
-	<ul>
-		<li data-ns-test="holidayList">Delhi</li>
-		<li data-ns-test="holidayList">Kashmir</li>
-		<li data-ns-test="holidayList">Bihar</li>
-	</ul>
+	 <ol>
+        <li data-ns-test="shoppingList">Laptop</li>
+        <li data-ns-test="shoppingList">Smartphone</li>
+        <li data-ns-test="shoppingList">Headphones</li>
+    </ol>
+    <ul>
+        <li data-ns-test="holidayList">Paris</li>
+        <li data-ns-test="holidayList">Bali</li>
+        <li data-ns-test="holidayList">Tokyo</li>
+    </ul>
     <script type="text/javascript" src="./script.js">
 </script>
 
